--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 <!-- Corps du document -->
 <body>
 <h1> Bonjour le monde ! </h1>
-  </body>
+<p> Petite modification pour tester Webstorm</p>
+</body>
 </html>
