titre vive les vacances

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 <body>
 <h1> Bonjour le monde ! </h1>
    <p> Petite modification pour tester Webstorm</p>
+<h2> Vive les vacances</h2>
 </body>
 </html>
